src/test/deca/syntax/invalid/homemade/included1.decah
// Description :
//      Included file for testing the include in another file
//
// History :
//      created on 9/01/2020

#include "included2.decah"

